--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>JavaScript Calculator</title>
+        <title>IOS Calculator</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
+        <!-- bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <!-- font awesome -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+        <!-- google fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
         <!-- Creating an ID for calculator -->
@@ -17,25 +25,26 @@
                 <button onclick="appendToDisplay('-')" class="negative-btn">+/-</button>
                 <button onclick="appendToDisplay('%')" class="percent-btn">%</button>
                 <button onclick="appendToDisplay('÷')" class="operator-btn">÷</button>
-                <button onclick="appendToDisplay('7')">7</button>
-                <button onclick="appendToDisplay('8')">8</button>
-                <button onclick="appendToDisplay('9')">9</button>
+                <button onclick="appendToDisplay('7')" class="number">7</button>
+                <button onclick="appendToDisplay('8')" class="number">8</button>
+                <button onclick="appendToDisplay('9')" class="number">9</button>
                 <button onclick="appendToDisplay('x')" class="operator-btn">x</button>
-                <button onclick="appendToDisplay('4')">4</button>
-                <button onclick="appendToDisplay('5')">5</button>
-                <button onclick="appendToDisplay('6')">6</button>
+                <button onclick="appendToDisplay('4')" class="number">4</button>
+                <button onclick="appendToDisplay('5')" class="number">5</button>
+                <button onclick="appendToDisplay('6')" class="number">6</button>
                 <button onclick="appendToDisplay('-')" class="operator-btn">-</button>
-                <button onclick="appendToDisplay('1')">1</button>
-                <button onclick="appendToDisplay('2')">2</button>
-                <button onclick="appendToDisplay('3')">3</button>
+                <button onclick="appendToDisplay('1')" class="number">1</button>
+                <button onclick="appendToDisplay('2')" class="number">2</button>
+                <button onclick="appendToDisplay('3')" class="number">3</button>
                 <button onclick="appendToDisplay('+')" class="operator-btn">+</button>
                 <button onclick="appendToDisplay('0')" class ="zero">0</button>
-                <button onclick="appendToDisplay('.')">.</button>
+                <button onclick="appendToDisplay('.')" class="decimal-btn">.</button>
                 <button onclick="calculate()" class="equal-btn">=</button>
             </div>
          </div>
-
-         <script src="js/script.js"></script>
-    
+        <!-- JavaScript -->
+        <script src="js/script.js"></script>
+         <!-- bootstrap js -->
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
